# clave

./: .gitignore  .releaserc  Cargo.toml  Justfile  README.md
.github/workflows/: release.yml  test.yml
src/: main.rs  pattern.rs
tracks/: README.md
tracks/44/: 44_100.mid  44_105.mid  44_110.mid  44_115.mid  44_120.mid  44_125.mid  44_130.mid  44_135.mid  44_140.mid  44_145.mid  44_150.mid  44_155.mid  44_160.mid  44_165.mid  44_170.mid  44_175.mid  44_180.mid  44_185.mid  44_190.mid  44_195.mid  44_200.mid  44_205.mid  44_210.mid  44_215.mid  44_220.mid  44_225.mid  44_230.mid  44_235.mid  44_240.mid  44_245.mid  44_250.mid  44_255.mid  44_260.mid  44_265.mid  44_270.mid  44_275.mid  44_280.mid  44_285.mid  44_290.mid  44_295.mid  (+13 more)
tracks/44_2/: 44_2_100.mid  44_2_105.mid  44_2_110.mid  44_2_115.mid  44_2_120.mid  44_2_125.mid  44_2_130.mid  44_2_135.mid  44_2_140.mid  44_2_145.mid  44_2_150.mid  44_2_155.mid  44_2_160.mid  44_2_165.mid  44_2_170.mid  44_2_175.mid  44_2_180.mid  44_2_185.mid  44_2_190.mid  44_2_195.mid  44_2_200.mid  44_2_205.mid  44_2_210.mid  44_2_215.mid  44_2_220.mid  44_2_225.mid  44_2_230.mid  44_2_235.mid  44_2_240.mid  44_2_245.mid  44_2_250.mid  44_2_255.mid  44_2_260.mid  44_2_265.mid  44_2_270.mid  44_2_275.mid  44_2_280.mid  44_2_285.mid  44_2_290.mid  44_2_295.mid  (+13 more)
tracks/44_3/: 44_3_100.mid  44_3_105.mid  44_3_110.mid  44_3_115.mid  44_3_120.mid  44_3_125.mid  44_3_130.mid  44_3_135.mid  44_3_140.mid  44_3_145.mid  44_3_150.mid  44_3_155.mid  44_3_160.mid  44_3_165.mid  44_3_170.mid  44_3_175.mid  44_3_180.mid  44_3_185.mid  (+35 more)
(+106 files in other folders)
