[package]
name = "clave"
version = "0.4.7"
edition = "2021"
description = "Midi click-track generator"
license = "MIT"
rust-version = "1.83"
repository = "https://github.com/mikea/clave"


[dependencies]
clap = { version = "4", features = ["derive"] }
midly = { version = "0" }
regex = { version = "1" }