[package]
name = "clave"
version = "0.0.0"
edition = "2021"
description = "Midi click-track generator"
license = "MIT"
rust-version = "1.89"
repository = "https://github.com/mikea/clave"


[dependencies]
clap = { version = "4", features = ["derive"] }
midly = { version = "0" }
nom = { version = "8"}
